[package]
name = "gallery_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
iced = { version = "0.12.1", features = ["image", "tokio"] }
time = "0.3"
dropbox-sdk = "0.18.0"